--- a/realproject/home.html
+++ b/realproject/home.html
@@ -66,7 +66,7 @@ $(window).scroll(function(e){
 	    <div id="map-canvas" style="width:63%;"></div>
 	    <div id="control_panel form-group" style="width:35%;padding-top:10px;padding-bottom:20px;margin-left: auto;margin-right: auto;">
 	    	<h2> Path of a Salesman</h2><br><br>
-			<form roll="form">
+			<form>
 				<label><b> Start </b></label><input type="text" size="45" name="start" id="start" class="form-control"><br><br>
 			</form>
 			<form id="loc">
