Path of a Salesman

--- a/public/map.html
+++ b/public/map.html
@@ -4,7 +4,7 @@
   <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
-    <title>Waypoints in directions</title>
+    <title>Path of a Salesman</title>
     <style>
       html, body, #map-canvas {
         height: 100%;
@@ -96,11 +96,6 @@ google.maps.event.addDomListener(window, 'load', initialize);
       <option value="10 N. Wisconsin Dr., Chenango Bridge">10 N. Wisconsin Dr., Chenango Bridge</option>
       <option value="258 Loretta Lane, Vestal">258 Loretta Lane, Vestal</option>
       <option value="119 Carlin Rd, Conklin">119 Carlin Rd, Conklin</option>
-      <option value="Park Terrace Food Pantry">Park Terrace Food Pantry</option>
-      <option value="St. Cyril and Methodist">St. Cyril and Methodist</option>
-      <option value="Valley Christian Reformed">Valley Christian Reformed</option>
-      <option value="St. Paul's Episcopal">St. Paul's Episcopal</option>
-      <option value="Windsor United Methodist Church">Windsor United Methodist Church</option>
     </select>
     <br>
     <b>Waypoints:</b> <br>
@@ -111,11 +106,6 @@ google.maps.event.addDomListener(window, 'load', initialize);
       <option value="10 N. Wisconsin Dr., Chenango Bridge">10 N. Wisconsin Dr., Chenango Bridge</option>
       <option value="258 Loretta Lane, Vestal">258 Loretta Lane, Vestal</option>
       <option value="119 Carlin Rd, Conklin">119 Carlin Rd, Conklin</option>
-      <option value="Park Terrace Food Pantry">Park Terrace Food Pantry</option>
-      <option value="St. Cyril and Methodist">St. Cyril and Methodist</option>
-      <option value="Valley Christian Reformed">Valley Christian Reformed</option>
-      <option value="St. Paul's Episcopal">St. Paul's Episcopal</option>
-      <option value="Windsor United Methodist Church">Windsor United Methodist Church</option>
     </select>
     <br>
     <b>End:</b>
@@ -130,11 +120,6 @@ google.maps.event.addDomListener(window, 'load', initialize);
       <option value="10 N. Wisconsin Dr., Chenango Bridge">10 N. Wisconsin Dr., Chenango Bridge</option>
       <option value="258 Loretta Lane, Vestal">258 Loretta Lane, Vestal</option>
       <option value="119 Carlin Rd, Conklin">119 Carlin Rd, Conklin</option>
-      <option value="Park Terrace Food Pantry">Park Terrace Food Pantry</option>
-      <option value="St. Cyril and Methodist">St. Cyril and Methodist</option>
-      <option value="Valley Christian Reformed">Valley Christian Reformed</option>
-      <option value="St. Paul's Episcopal">St. Paul's Episcopal</option>
-      <option value="Windsor United Methodist Church">Windsor United Methodist Church</option>
     </select>
     <br>
       <input class="form-control btn btn-default" type="submit" onclick="calcRoute();">
